Bug 57120 - Crash when paused at a breakpoint caused by inaccurate Activation records.
Summary: Crash when paused at a breakpoint caused by inaccurate Activation records.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Geoffrey Garen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-25 13:48 PDT by Geoffrey Garen
Modified: 2011-03-25 15:01 PDT (History)
1 user (show)

See Also:


Attachments
Patch (6.28 KB, patch)
2011-03-25 14:32 PDT, Geoffrey Garen
oliver: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Geoffrey Garen 2011-03-25 13:48:37 PDT
Crash when paused at a breakpoint caused by inaccurate Activation records.
Comment 1 Geoffrey Garen 2011-03-25 14:32:05 PDT
Created attachment 86982 [details]
Patch
Comment 2 Oliver Hunt 2011-03-25 14:42:31 PDT
Comment on attachment 86982 [details]
Patch

r=me
Comment 3 Geoffrey Garen 2011-03-25 15:01:35 PDT
Committed r81994: <http://trac.webkit.org/changeset/81994>